--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "devDependencies": {
         "@turf/turf": "^6.5.0",
         "parcel": "^2.12.0",
+        "process": "^0.11.10",
         "rimraf": "^5.0.5"
     },
     "source": "src/index.html",
